// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth Create form Form should render correctly 1`] = `
<div
  className="sc-Axmtr hjHhIB"
>
  <div
    className="sc-AxmLO czuJjP"
  >
    <form
      noValidate={true}
      onSubmit={[Function]}
    >
      <label
        className="sc-AxjAm bnkTnU"
        htmlFor="username"
      >
        <span
          className="sc-AxirZ lbZqdG"
        >
          Username
        </span>
        <input
          autoComplete="create-username"
          className="sc-AxhUy hUbURi"
          id="username"
          name="username"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-AxjAm bnkTnU"
        htmlFor="email"
      >
        <span
          className="sc-AxirZ lbZqdG"
        >
          Email address
        </span>
        <input
          autoComplete="create-email"
          className="sc-AxhUy hUbURi"
          id="email"
          name="email"
          onChange={[Function]}
          spellCheck={false}
          type="email"
        />
      </label>
      <label
        className="sc-AxjAm bnkTnU"
        htmlFor="firstName"
      >
        <span
          className="sc-AxirZ lbZqdG"
        >
          First name
        </span>
        <input
          className="sc-AxhUy hUbURi"
          id="firstName"
          name="firstName"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-AxjAm bnkTnU"
        htmlFor="lastName"
      >
        <span
          className="sc-AxirZ lbZqdG"
        >
          Last name
        </span>
        <input
          className="sc-AxhUy hUbURi"
          id="lastName"
          name="lastName"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <button
        className="sc-AxgMl dzrPxP"
        disabled={false}
        id="create-button"
        type="submit"
      >
        Create
      </button>
    </form>
  </div>
</div>
`;

exports[`Auth Create form Form should render correctly with groups 1`] = `
<div
  className="sc-Axmtr hjHhIB"
>
  <div
    className="sc-AxmLO czuJjP"
  >
    <form
      noValidate={true}
      onSubmit={[Function]}
    >
      <label
        className="sc-AxjAm bnkTnU"
        htmlFor="username"
      >
        <span
          className="sc-AxirZ lbZqdG"
        >
          Username
        </span>
        <input
          autoComplete="create-username"
          className="sc-AxhUy hUbURi"
          id="username"
          name="username"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-AxjAm bnkTnU"
        htmlFor="email"
      >
        <span
          className="sc-AxirZ lbZqdG"
        >
          Email address
        </span>
        <input
          autoComplete="create-email"
          className="sc-AxhUy hUbURi"
          id="email"
          name="email"
          onChange={[Function]}
          spellCheck={false}
          type="email"
        />
      </label>
      <label
        className="sc-AxjAm bnkTnU"
        htmlFor="firstName"
      >
        <span
          className="sc-AxirZ lbZqdG"
        >
          First name
        </span>
        <input
          className="sc-AxhUy hUbURi"
          id="firstName"
          name="firstName"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-AxjAm bnkTnU"
        htmlFor="lastName"
      >
        <span
          className="sc-AxirZ lbZqdG"
        >
          Last name
        </span>
        <input
          className="sc-AxhUy hUbURi"
          id="lastName"
          name="lastName"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-AxjAm bnkTnU"
        htmlFor="groupCode"
      >
        <span
          className="sc-AxirZ lbZqdG"
        >
          Select group
        </span>
        <select
          className="sc-fzozJi dxkmJu"
          id="groupCode"
          name="groupCode"
          onChange={[Function]}
        >
          <option
            value="--"
          >
            -- Select --
          </option>
          <option
            data-qa="GROUP_1_option"
            value="GROUP_1"
          >
            Group 1
          </option>
          <option
            data-qa="GROUP_2_option"
            value="GROUP_2"
          >
            Group 2
          </option>
          <option
            data-qa="GROUP_3_option"
            value="GROUP_3"
          >
            Group 3
          </option>
        </select>
      </label>
      <button
        className="sc-AxgMl dzrPxP"
        disabled={false}
        id="create-button"
        type="submit"
      >
        Create
      </button>
    </form>
  </div>
</div>
`;
